sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: value >- is not a member of Int
    }else if (i>-1){
               ^